--- a/2rozdzial1.tex
+++ b/2rozdzial1.tex
@@ -32,7 +32,7 @@ One of the most promising applications of MMS is the PR2 research platform from 
 \label{fig:pr2}
 \end{figure}
 
-The wide functionality of a MMS robot makes its design a challenging task. The unstructured working environment and additional degrees of freedom complicate the autonomous control of such system. Furthermore, the workspace of a mobile manipulator is often shared with people and other vehicles. Such environment renders many potentially hazardous situations and requires a highly sophisticated control system with vision based feedback. The idea of the project is to develop a MMS system, that will serve as a research base in these areas.
+Wide functionality of a MMS robot makes its design a challenging task. The unstructured working environment and additional degrees of freedom complicate the autonomous control of such system. Furthermore, the workspace of a mobile manipulator is often shared with people and other vehicles. Such environment renders many potentially hazardous situations and requires a highly sophisticated control system with vision based feedback. The idea of the project is to develop a MMS system, that will serve as a research base in these areas.
 
 %---------------------------------------------------------------------------
 
