--- a/5rozdzial4.tex
+++ b/5rozdzial4.tex
@@ -10,7 +10,7 @@ A MMS robot equipped with a depth acquisition system is a particularly well suit
 
 The first issue encountered during the development of the autonomous mode was adequate positioning of the depth camera. As mentioned in section \ref{sec:3dsum}, the selected RGB-D sensor, Asus Xtion Pro operating range starts from $0.8m$. In practice, however, the first proper measurements are returned from a distance of $0.5m$, which is still a relatively high value compared to the dimensions of the whole robot. For this reason, the camera position and field of view determines the size of objects that can be used as targets. Moreover, the RGB-D camera location is also crucial during obstacle detection. The system should be able to determine whether it is possible to displace an entire width of the platform forward. While moving ahead, the analysed area is desired to be large enough that the robot could react to obstacle on time and avoid collision. The region close to the front of the platform should also be examined, as obstacles are likely to occur there during platform rotation.
 
-The mounting point of the RGB-D camera has been selected in place of an end-effector of the larger manipulator. This setting has allowed for reproducible and convenient adjustments of the camera pose. The Figure \ref{fig:fov} presents a simplified view of camera setting relative to the mobile platform. The manipulator is positioned in the plane compliant with the drawing and only the joints relevant to this plane are specified. The joint angles $\theta_1, \theta_2, \theta_3$ were experimentally selected to meet the previously specified field of view requirements. In such setting, the robot is able to perceive the full dimensions of small sized objects, such as a coffe mug, which is sufficient for further processing purposes.
+The mounting point of the RGB-D camera has been selected in place of an end-effector of the larger manipulator. This setting has allowed for reproducible and convenient adjustments of the camera pose. The Figure \ref{fig:fov} presents a simplified view of camera setting relative to the mobile platform. The manipulator is positioned in the plane compliant with the drawing and only the joints relevant to this plane are specified. The joint angles $\theta_1, \theta_2, \theta_3$ were experimentally selected to meet the previously established field of view requirements. In such setting, the robot is able to perceive the full dimensions of small sized objects, such as a coffe mug, which is sufficient for further processing purposes.
 
 \input{fig/fieldofview}
 
@@ -89,7 +89,7 @@ R_x=\left[\begin{array}{ccc}
 \end{equation}
 After viewpoint transformation, the VoI is extracted by applying a Passthrough filter along X and Z axes of the received cloud. The filtration ranges have been experimentally selected to $[-0.3m, 0.3m]$ along the X axis, which corresponds to the robot width, and $[0m, 0.55m]$ along the Z axis, which represent the maximal obstacle distance.
 
-The last stage of the obstacle detection processing is the outlier removal. The RadiusOutlierRemoval class from PCL is utilised for this purpose. The search radius of this filter is selected to $r = 10cm$, and the number of $r$-neigbours, below which the query point is considered as an outlier, is set to $10$. Such setting allows to reduce the number of noise in the point cloud and the final result of obstacle detection is then based the remaining number of points. If the processed point cloud contains more than $50$ points, a positive obstacle detection is returned. This threshold allows to successfully detect small objects, such as a box of matches, while discarding all of the remaining measurement errors.
+The last stage of the obstacle detection processing is the outlier removal. The RadiusOutlierRemoval class from PCL is utilised for this purpose. The search radius of this filter is selected to $r = 10cm$, and the number of $r$-neigbours, below which the query point is considered as an outlier, is set to $10$. Such setting allows to reduce the number of noise in the point cloud and the final result of obstacle detection is then based on the remaining number of points. If the processed point cloud contains more than $50$ points, a positive obstacle detection is returned. This threshold allows to successfully detect small objects, such as a box of matches, while discarding all of the remaining measurement errors.
 
 	
 
@@ -191,4 +191,4 @@ Three search targets were selected to test the implementation of the object reco
 
 Each of the implemented methods provided different recognition performance. The best results of the established task were obtained with the spherical model of the tennis ball, which was recognized in most of the cases. This is justified by the fact, that this model possess the smallest number of optimized parameters. The most difficult aspect of testing the object recognition implementation, which requires further improvement, was to properly set all of the thresholding parameters for the depth data processing procedures. 
 
-The RANSAC shape model fitting is governed the distance threshold between the accepted inliers and the model. This parameter is used to specify the expected inaccuracy of the acquired point cloud.  In case of the tennis ball target, the model is successfully matched with tolerance of $5mm$. The cylindrical model, on the other hand, required much higher tolerance of about $3cm$ to return positive model recognition. Unfortunately, such high tolerance resulted i.e. in cylinders fitted to furniture edges. A possible improvement of this method performance requires further tuning of parameters, such as the normal estimation radius. In case of the recognition method based on the VFH descriptor, the results were also unsatisfactory and further research has to be conducted to improve its performance. Most probably, this was caused by the fact, that the training set was generated from insufficient descriptive angles. In future, a pan-tilt device is planned to be utilised for object scanning from a large number of distinct rotations.
+The RANSAC shape model fitting is governed by the distance threshold between the accepted inliers and the model. This parameter is used to specify the expected inaccuracy of the acquired point cloud.  In case of the tennis ball target, the model is successfully matched with tolerance of $5mm$. The cylindrical model, on the other hand, required much higher tolerance of about $3cm$ to return positive model recognition. Unfortunately, such high tolerance resulted i.e. in cylinders fitted to furniture edges. A possible improvement of this method performance requires further tuning of parameters, such as the normal estimation radius. In case of the recognition method based on the VFH descriptor, the results were also unsatisfactory and further research has to be conducted to improve its performance. Most probably, this was caused by the fact, that the training set was generated from insufficient descriptive angles. In future, a pan-tilt device is planned to be utilised for object scanning from a large number of distinct rotations.
