--- a/praca.tex
+++ b/praca.tex
@@ -57,22 +57,22 @@
 \shorttitlePL{Design and development of the system for data acquisition and analysis for the mobile platform with a set of two manipulators.} % skrócona wersja tytułu jeśli jest bardzo długi
 \shorttitleEN{Design and development of the system for data acquisition and analysis for the mobile platform with a set of two manipulators.}
 
-%\thesistype{Praca dyplomowa magisterska}
-\thesistype{Bachelor of Engineering Thesis}
+\thesistype{Praca dyplomowa inżynierska}
+\thesistypeEN{Bachelor of Engineering Thesis}
 
 \supervisor{dr inż. Paweł Rotter}
 %\supervisor{Marcin Szpyrka PhD, DSc}
 
-%\degreeprogramme{Automatyka i Robotyka}
-\degreeprogramme{Automatics and Robotics}
+\degreeprogramme{Automatyka i Robotyka}
+\degreeprogrammeEN{Automatics and Robotics}
 
-\date{2013}
+\date{2015}
 
-%\department{Katedra Automatyki i Inżynierii Biomedycznej}
-\department{Department of Automatics and Bioengineering}
+\department{Katedra Automatyki i Inżynierii Biomedycznej}
+\departmentEN{Department of Automatics and Bioengineering}
 
-%\faculty{Wydział Elektrotechniki, Automatyki,\protect\\[-1mm] Informatyki i Inżynierii Biomedycznej}
-\faculty{Faculty of Electrical Engineering, Automatics, Computer Science and Biomedical Engineering}
+\faculty{Wydział Elektrotechniki, Automatyki,\protect\\[-1mm] Informatyki i Inżynierii Biomedycznej}
+\facultyEN{Faculty of Electrical Engineering, Automatics, Computer Science and Biomedical Engineering}
 
 \acknowledgements{I wish to thank to the Supervisor of this thesis for help and to the ABB Corporate Research Centre for support in development of this project }
 
